--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
   "dependencies": {
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
+    "dot": "^1.1.3",
+    "dotenv": "^16.4.7",
+    "env": "^0.0.2",
+    "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.0",
     "sequelize": "^6.37.6"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
