--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.0",
